--- a/Women_Cloth_Reviews_Prediction.ipynb
+++ b/Women_Cloth_Reviews_Prediction.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPNXrBF+C+/b037tHWvQWG5",
+      "authorship_tag": "ABX9TyMeYtxnqgHv8oohE4X2T1T3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "h_i7kkSYxjq7"
       },
@@ -50,6 +50,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Objectives**"
+      ],
+      "metadata": {
+        "id": "T_U32f2M7Bvt"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Data Source"
+      ],
+      "metadata": {
+        "id": "4yTf8H957Q5n"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "df=pd.read_csv('https://github.com/YBIFoundation/Dataset/raw/main/Diabetes.csv')"
@@ -57,8 +75,17 @@
       "metadata": {
         "id": "JluYLTR43mIe"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Describe Data**"
+      ],
+      "metadata": {
+        "id": "stLaQ1dw9dkK"
+      }
     },
     {
       "cell_type": "code",
@@ -73,7 +100,7 @@
         "id": "QZ7Fynn791i3",
         "outputId": "e5552ab5-db47-4810-d26f-9c93c68432dc"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -422,7 +449,7 @@
         "id": "MIH9UZxd-AUt",
         "outputId": "0060daf6-0424-436c-a44b-d38c53415aac"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -449,6 +476,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Data Processing**"
+      ],
+      "metadata": {
+        "id": "TBkPhMV99s4f"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "df.describe()"
@@ -461,7 +497,7 @@
         "id": "XyIWZtCa-fet",
         "outputId": "8d98b80c-d592-4391-c286-365c69fd96b0"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -840,15 +876,13 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "# step 3: define traget(y) and features(x)"
+        "**Define Target Variable (y) and Feature Variables (X)**"
       ],
       "metadata": {
-        "id": "q1rglXrw_nYW"
-      },
-      "execution_count": 10,
-      "outputs": []
+        "id": "8z2dsXCt98Io"
+      }
     },
     {
       "cell_type": "code",
@@ -862,7 +896,7 @@
         "id": "2sVnd_tWACNH",
         "outputId": "75b7f72a-a6e6-4c14-9e1a-fe8cce310728"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -886,7 +920,7 @@
       "metadata": {
         "id": "o5zLqpilAicp"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -897,8 +931,17 @@
       "metadata": {
         "id": "BZWucXn3A7IS"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Train Test Split**"
+      ],
+      "metadata": {
+        "id": "dl_kYWLl-BDP"
+      }
     },
     {
       "cell_type": "code",
@@ -910,7 +953,7 @@
       "metadata": {
         "id": "euyBsgE1BNn9"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -925,7 +968,7 @@
         "id": "PC21ltaWKo5Y",
         "outputId": "66550376-94e0-4aa4-e8ac-64b9aae540b1"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -940,6 +983,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Model Evaluation**"
+      ],
+      "metadata": {
+        "id": "-5ZnSzVY-Maw"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from sklearn.linear_model import LogisticRegression\n",
@@ -948,8 +1000,17 @@
       "metadata": {
         "id": "mmxXDjDnLjor"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Model Processing**"
+      ],
+      "metadata": {
+        "id": "ue4D09Kq-rB6"
+      }
     },
     {
       "cell_type": "code",
@@ -964,7 +1025,7 @@
         "id": "7y6zUs-tMgdc",
         "outputId": "d9824b5c-4da0-4f3e-8b3e-6c93fdf782f3"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -993,7 +1054,7 @@
         "id": "6-3Dyya7NBFI",
         "outputId": "3cea7089-be72-46ed-f6b9-5ac5c73c2472"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1019,7 +1080,7 @@
         "id": "uVclaGHfNI9A",
         "outputId": "8d83fe3c-d123-429c-ee9a-ab5a09977809"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1036,6 +1097,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Prediction**"
+      ],
+      "metadata": {
+        "id": "TgQieprV-1Z4"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "y_pred=model.predict(X_test)"
@@ -1043,7 +1113,7 @@
       "metadata": {
         "id": "tyDpcFDtNXT3"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1058,7 +1128,7 @@
         "id": "XBlTbESzQV1n",
         "outputId": "9e545f01-08e2-442f-fd0f-55ca546e1f34"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1090,7 +1160,7 @@
       "metadata": {
         "id": "16536croQd1T"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1105,7 +1175,7 @@
         "id": "1tV3JHlfRbtW",
         "outputId": "3cc85c07-b38e-4752-8916-a51ebb6a5b00"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1132,7 +1202,7 @@
         "id": "EbdgjcXGRy-R",
         "outputId": "81262f57-cbf5-4917-aaa1-1281cc2b3b8b"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1158,7 +1228,7 @@
         "id": "dIPow1L0SDXT",
         "outputId": "70dd0a5a-de80-40f8-ae48-4ee65174e98a"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
